--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -1,3 +1,11 @@
 
 //configs
 @use "bootstrap"
+
+//components
+@use "header"
+@use "about"
+@use "projects"
+@use "cv"
+@use "contacts"
+@use "footer"
