--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -1,13 +1,22 @@
 
+//max-width
+$max-width: 1280px
+
 //colors
 $primary: #00C176
-$secondary: #0d0d0d
-$text-primary: #fff
-$text-secondary: #dfdfdf
+$secondary: #fff
+$text-primary: #efefef
+$text-secondary: #ddd
 $text-tertiary: #2D2D2D
 
 //font-size
 $text-sm: 1rem
 $text-md: 1.5rem
 $text-lg: 2rem
-$text-xl: 3rem
+$text-xl: 2.5rem
+$text-xxl: 3rem
+
+//font-weight
+$text-light: 300
+$text-medium: 500
+$text-bold: 700
