--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -1,11 +1,14 @@
 
 //configs
-@use "bootstrap"
+@import "bootstrap"
 
 //components
-@use "header"
-@use "about"
-@use "projects"
-@use "cv"
-@use "contacts"
-@use "footer"
+@import "header"
+@import "about"
+@import "projects"
+@import "cv"
+@import "contacts"
+@import "footer"
+
+//media
+@import "media"
