--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -9,6 +9,17 @@ $text-primary: #efefef
 $text-secondary: #ddd
 $text-tertiary: #2D2D2D
 
+$html-color: #E56721
+$css-color: #0000FF
+$js-color: #F7DF1E
+$bootstrap-color: #563D7C
+$react-color: #61DAFB
+$sass-color: #CF649A
+$git-color: #FB4F28
+$github-color: #000000
+$phone-color: #03C100
+$linkedin-color: #0E76A8
+
 //font-size
 $text-sm: 1rem
 $text-md: 1.5rem
