--- a/assets/sass/contacts.sass
+++ b/assets/sass/contacts.sass
@@ -6,21 +6,23 @@
 
     #container-contacts
         padding: 3rem
+        @include mixins.align-center
 
         ul
-            @include mixins.align-center
-            
+            display: flex
+            justify-content: center
             flex-wrap: wrap
             gap: 1.5rem
 
             li
+                
                 a
+                    width: 250px
+                    height: 250px   
                     display: flex
                     flex-direction: column
                     align-items: center
                     justify-content: space-between
-                    width: 250px
-                    height: 220px
                     background: white
                     border-radius: 20px
                     padding: 1.5rem
@@ -29,9 +31,21 @@
                     &:hover
                         transform: scale(1.1)
 
-                img
-                    width: 100px
-                    text-align: center
+                i
+                    font-size: 80px
+                    color: #000
+
+                #email-contact
+                    color: variables.$html-color
+
+                #phone-contact
+                    color: variables.$phone-color
+                
+                #github-contact
+                    color: variables.$github-color
+
+                #linkedin-contact
+                    color: variables.$linkedin-color
 
                 strong
                     color: variables.$text-tertiary
