--- a/assets/sass/cv.sass
+++ b/assets/sass/cv.sass
@@ -9,6 +9,7 @@
         flex-direction: column
         padding: 3rem
         gap: 1rem
+        height: 30vh
 
         p
             max-width: 80%
