--- a/assets/sass/header.sass
+++ b/assets/sass/header.sass
@@ -10,11 +10,12 @@
         display: flex
         justify-content: space-between
         align-items: center
-        padding: 0 2rem
+        padding: 2rem
+        height: 100px
 
         #navbar
             width: 600px
-            height: 100px
+            height: inherit    
 
             ul
                 height: inherit
@@ -52,7 +53,6 @@
             max-width: 700px
 
         #content
-            width: 45%
             h1
                 font-size: variables.$text-xxl
                 text-transform: uppercase
@@ -71,7 +71,7 @@
                 line-height: 1.5rem
                 color: variables.$text-secondary
                 font-weight: variables.$text-medium
-                max-width: 60%
+                width: 60%
                 margin-bottom: 1.5rem
 
         #container-img           
