--- a/assets/sass/projects.sass
+++ b/assets/sass/projects.sass
@@ -1,29 +1,34 @@
 
 @use "variables"
+@use "mixins"
 
 #projects
 
     #container-projects
         padding: 3rem
+        @include mixins.align-center
 
         ul
-            display: grid
-            grid-template-columns: repeat(3, 340px)
-            gap: 1rem
+            width: 100%
+            display: flex
+            justify-content: center
+            flex-wrap: wrap
+            gap: 1.5rem
 
             justify-content: center
 
             li
                 .project
-                    width: 340px
-                    height: 360px
                     border-radius: 20px
                     background: variables.$secondary
-                    padding: 1.5rem
+                    padding: 2rem
+                    min-width: 320px
+                    width: 350px
+                    height: 400px
 
                     .media
-                        width: 300px
-                        height: 200px
+                        width: 100%
+                        height: 60%
                         background: #000
                         margin-bottom: 1rem
 
@@ -31,7 +36,6 @@
                         display: flex
                         flex-direction: column
                         align-items: center
-                        gap: .3rem
                         
                         strong,span 
                             color: variables.$text-tertiary
@@ -51,9 +55,11 @@
                             font-size: variables.$text-md
                             color: variables.$text-tertiary
                             font-weight: variables.$text-bold
+                            margin-bottom: 1.5rem
 
                         span 
                             font-size: variables.$text-sm
+                            margin-bottom: 1rem
                         a 
                             color: variables.$primary
                             text-decoration: underline
