finish responsivity in the website and add preview imagens in all projects

--- a/assets/sass/bootstrap.sass
+++ b/assets/sass/bootstrap.sass
@@ -16,7 +16,6 @@ body
     background: url("../img/background.png") no-repeat
     background-size: cover
     background-attachment: fixed
-    scroll-behavior: smooth
 
 /*utils*/
 .container
@@ -54,11 +53,11 @@ body
 
 .title-section
     width: 100%
-    padding: 3rem 0
-    font-size: variables.$text-xl
-    text-transform: uppercase
-    text-align: center
+    padding: 2rem
     border-bottom: 1px solid variables.$secondary
+    font-size: variables.$text-xl
     color: variables.$text-secondary
     font-weight: variables.$text-bold
+    text-transform: uppercase
+    text-align: center
     background: rgba(0, 0, 0, .7)
