--- a/assets/sass/about.sass
+++ b/assets/sass/about.sass
@@ -3,50 +3,56 @@
 @use "mixins"
 
 #about
-
+    
     article
+
         background: rgba(0, 0, 0, .7)
-        padding:2rem 3rem
+        padding:2rem
+
         p
             text-align: center
             width: 50%
-            margin: 2rem auto
+            margin: 0 auto
             font-size: variables.$text-sm
             color: variables.$text-secondary
-            font-weight: 400
+            font-weight: variables.$text-medium
             line-height: 1.5rem
 
     #skills
-        padding: 3rem
+        padding: 2rem
 
         h3 
-            font-size: variables.$text-lg
-            text-align: center
             color: variables.$text-secondary
-            font-weight: 400
-            margin-bottom: 3rem
+            font-size: variables.$text-lg
+            font-weight: variables.$text-medium
+            text-align: center
+            margin-bottom: 2rem
 
         #container-tecs
             display: flex
+            justify-content: center
             align-items: center
+            flex-wrap: wrap
 
-            #description-tecnology,
-            #tecnologies
-                flex: 1
+            #tecnologies,
+            #description-tecnology
+                max-width: 544px
+                flex: 1 0 544px
+                padding: 2rem
 
             #tecnologies
-                padding: 3rem
 
                 ul
                     display: grid
-                    grid-template-columns: repeat(3, 1fr)
+                    grid-template-columns: repeat(3, 140px)
+                    grid-template-rows: repeat(3, 140px)
                     gap: 1rem
+                    justify-content: center
 
                     .tecnology
+                        width: 100%
+                        height: 100%
                         @include mixins.align-center()
-                        width: 140px
-                        height: 140px
-                        padding: 1.5rem
                         background: variables.$secondary
                         border-radius: 20px
                         transition: .5s
@@ -56,8 +62,7 @@
                             transform: scale(1.1)
 
                         i
-                            color: #000
-                            font-size: 100px
+                            font-size: 600%
 
                         #html
                             color: variables.$html-color
@@ -87,21 +92,19 @@
 
             #description-tecnology
 
+                background: rgba(0, 0, 0, .5)
+                border-radius: 20px
+
                 ul
                     li
                         .description
-                            padding: 1rem
-                            border-radius: 20px
-                            background: rgba(0, 0, 0, .5)
 
                             h3
                                 font-size: variables.$text-md
                                 margin-bottom: 1.5rem
                                 text-transform: uppercase
                             p
-                                width: 70%
                                 color: variables.$text-secondary
-                                margin: 0 auto
-                                line-height: 1.5rem
                                 font-weight: variables.$text-medium
+                                line-height: 1.5rem
                                 margin-bottom: 1rem
