--- a/assets/sass/contacts.sass
+++ b/assets/sass/contacts.sass
@@ -22,7 +22,7 @@
                     display: flex
                     flex-direction: column
                     align-items: center
-                    justify-content: space-between
+                    justify-content: space-evenly
                     background: white
                     border-radius: 20px
                     padding: 1.5rem
@@ -32,8 +32,7 @@
                         transform: scale(1.1)
 
                 i
-                    font-size: 80px
-                    color: #000
+                    font-size: 450%
 
                 #email-contact
                     color: variables.$html-color
@@ -52,11 +51,9 @@
                     font-weight: variables.$text-bold
                     font-size: variables.$text-md
                     text-transform: uppercase
-                    text-align: center
 
                 span
                     color: variables.$text-tertiary
                     font-weight: variables.$text-medium
                     text-align: center
-                    width: 100%
                     word-break: break-all
