--- a/assets/sass/header.sass
+++ b/assets/sass/header.sass
@@ -4,60 +4,47 @@
 @use "mixins"
 
 #header
-    height: 90vh
 
     #top
         display: flex
         justify-content: space-between
         align-items: center
-        padding: 2rem
         height: 100px
+        padding: 2rem
 
         #navbar
             width: 600px
-            height: inherit    
-
             ul
-                height: inherit
                 display: flex
                 align-items: center
 
                 li
                     flex: 1
-                    @include mixins.align-center
-                    
-                    width: 100%
-                    height: 50%
 
                     a
-                        height: 100%
+                        display: inline-block
                         width: 100%
-                        @include mixins.align-center
-                        
+                        padding: 1rem 0
+                        text-align: center  
                         text-transform: uppercase
                         font-size: variables.$text-sm
                         font-weight: variables.$text-bold
 
                         &:hover
                             color: variables.$primary
-                            height: 100%
                             border-bottom: 3px solid variables.$primary
 
     #presentation
-
-        flex: 1
         @include mixins.align-center
-        padding: 0 2rem
-
-        #content, #container-img
-            max-width: 700px
+        padding: 2rem
 
         #content
+            z-index: 1
             h1
                 font-size: variables.$text-xxl
-                text-transform: uppercase
                 font-weight: variables.$text-bold
-                line-height: 90%
+                text-transform: uppercase
+                line-height: 100%
                 margin-bottom: 1.5rem
 
                 span
@@ -75,7 +62,7 @@
                 margin-bottom: 1.5rem
 
         #container-img           
-
+            z-index: 0
             img
                 width: 600px
                 position: relative
