--- a/assets/sass/media.sass
+++ b/assets/sass/media.sass
@@ -1,6 +1,6 @@
 @use "variables"
 
-@media (max-width: 1024px)
+@media (max-width: 1149px)
 
     //header
     #header
@@ -18,26 +18,13 @@
                 img
                     width: 500px
 
-    //container tecs
-    #container-tecs
-        flex-direction: column
-
-        #tecnologies
-            border-right: none !important
-            border-bottom: 1px solid variables.$secondary
-
-        #description-tecnology
-
-            .description
-                margin-top: 3rem
-
-                p
-                    text-align: center
-
-@media (max-width: 967px)
+@media (max-width: 968px)
     #header
         //presentation
         #presentation
+
+            h1 
+                font-size: variables.$text-lg
 
             #content
                 p
@@ -47,91 +34,57 @@
                 img
                     width: 450px
 
-@media (max-width: 916px)
+@media (max-width: 918px)
     #header
         //presentation
         #presentation
 
             #content
-
                 h1
                     font-size: variables.$text-lg
                     span
                         font-size: variables.$text-md
 
-                p
-                    width: 80%
-
             #container-img
                 img
                     width: 400px
 
-@media (max-width: 820px)
+@media (max-width: 890px)
 
     //header
     #header
-        height: 70vh
         #top
+            gap: 1.5rem
+            height: max-content
             flex-direction: column
 
-    //projects
-    #projects
-        #container-projects
-            padding: 3rem 0
-            margin: 0
-            ul
-                gap: 1
-                li
-                    display: flex
-                    justify-content: center
-                    gap: 0
-
-@media (max-width: 768px)
+@media (max-width: 787px)
 
     .title-section
         font-size: variables.$text-md
 
     //header
     #header
-        height: max-content
-
-        #top
-            height: max-content
-
-            #navbar
-                margin-top: 1.5rem
-
-        //presentation
         #presentation
-            padding: 3rem
             flex-direction: column
+            align-items: center
 
             #content
-                width: 100%
                 text-align: center
+                width: 80%
                 p
                     width: 100%
 
             #container-img
                 img
-                    display: none
+                    width: 385px
 
     //about
     #about
-
+        
         article
             p
-                width: 90%
-
-    //projects
-    #projects
-        #container-projects
-            ul
-
-                li
-                    width: 100%
-                    display: flex
-                    justify-content: center
+                width: 100%
 
 @media (max-width: 600px)
 
@@ -140,45 +93,105 @@
         #top
             #navbar
                 width: 100%
+
+        #container-img
+            display: none
+
+@media (max-width: 594px)
+    
+    #about
+
+        #container-tecs
+
+            #tecnologies,
+            #description-tecnology
+                flex-basis: auto !important
+                width: 90% !important
+
+            #tecnologies
+                
+                ul
+                    grid-template-columns: repeat(3, 80px) !important
+                    grid-template-rows: repeat(3, 80px) !important
+
+                    .tecnology
+                        img
+                            width: 100% !important
+                        i
+                            font-size: 300% !important
+
+@media (max-width: 560px)
+    
+    #header
+
+        #top
+
+            #navbar
                 background: rgba(0, 0, 0, .5)
                 ul
                     flex-direction: column
-
                     li
-                        a
-                            padding: 1rem
-                            text-align: center
+                        width: 100%
+                        a 
                             &:hover
-                                border: none
-                                color: variables.$text-primary
+                                color: variables.$text-secondary
+                                border: 2px solid rgba(0, 0, 0, .5)
 
-    //about
-    #about
-        #skills
+@media (max-width: 468px)
+    //html
+    html
+        font-size: 14px
 
-            h3 
-                margin-bottom: 0
-
-            #container-tecs
-                #tecnologies
-                    ul
-                        .tecnology
-                            width: 80px
-                            height: 80px
-
-                            img
-                                width: 80px
-                            i
-                                font-size: 50px
     //projects
     #projects
+
         #container-projects
+
+            .project
+                height: 350px !important
+
+    //contacts
+    #contacts
+
+        #container-contacts
+
             ul
-
                 li
-                    width: 80%
-                    display: flex
-                    justify-content: center
+                    a
+                        width: 200px
+                        height: 200px
+    
 
-                    .project
-                        width: 80%
+@media (max-width: 425px)
+    
+    //header
+    #header
+        
+        #top
+            padding: 2rem 0
+
+@media (max-width: 410px)
+
+    //header
+    #header
+
+        #presentation
+
+            #content
+                h1
+                    font-size: variables.$text-md
+                    line-height: 2rem
+
+@media (max-width: 333px)
+
+    //html
+    html
+        font-size: 12px
+
+    //projects
+    #projects
+
+        #container-projects
+
+            .project
+                height: 300px !important
