--- a/assets/sass/projects.sass
+++ b/assets/sass/projects.sass
@@ -6,31 +6,36 @@
 
     #container-projects
         padding: 3rem
-        @include mixins.align-center
+        display: flex
+        justify-content: center
 
         ul
-            width: 100%
             display: flex
             justify-content: center
             flex-wrap: wrap
             gap: 1.5rem
 
-            justify-content: center
-
             li
+                min-width: 300px
+                max-width: 400px
+                flex: 1
+
                 .project
-                    border-radius: 20px
-                    background: variables.$secondary
-                    padding: 2rem
-                    min-width: 320px
-                    width: 350px
+                    width: 100%
                     height: 400px
+                    background: variables.$secondary
+                    padding: 1rem
 
                     .media
                         width: 100%
-                        height: 60%
+                        height: 55%
                         background: #000
+                        border: 1px solid #000
                         margin-bottom: 1rem
+
+                        img
+                            width: 100%
+                            height: 100%
 
                     .media-description
                         display: flex
